--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -42,3 +42,30 @@ $desktopXG: 1200px;
     -moz-box-shadow: 0px 0px 31px 11px rgba(30,74,39,1);
     box-shadow: 0px 0px 31px 11px rgba(30,74,39,1);
 }
+
+@keyframes imagen-index {
+	0% {
+		transform: scale(1);
+	}
+
+	50% {
+		transform: scale(1.1);
+	}
+
+	100% {
+		transform: scale(1);
+	}
+}
+@keyframes titulos-animacion {
+	0% {
+		opacity: 1;
+	}
+
+	50% {
+		opacity: 0.2;
+	}
+
+	100% {
+		opacity: 1;
+	}
+}
