--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,28 @@
 /*TAMAÑO DE FUENTES*/
 /*RESOLUCIONES*/
 /*Mixin*/
+@keyframes imagen-index {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+@keyframes titulos-animacion {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.2;
+  }
+  100% {
+    opacity: 1;
+  }
+}
 * {
   margin: 0;
   padding: 0;
@@ -164,6 +186,7 @@ nav-link.active:hover,
   -moz-box-shadow: 0px 0px 31px 11px rgb(30, 74, 39);
   box-shadow: 0px 0px 31px 11px rgb(30, 74, 39);
   margin-left: 12px;
+  animation: imagen-index 2s ease 0s 2 reverse both;
 }
 
 .hp-img {
@@ -192,6 +215,10 @@ h1, h2 {
   padding: 40px;
 }
 
+.tituloBiografia {
+  animation: titulos-animacion 2s ease 0s 1 normal forwards;
+}
+
 .iframeBiografia {
   display: flex;
   flex-direction: row;
@@ -215,6 +242,10 @@ h1, h2 {
   display: flex;
   flex-direction: column;
   padding: 40px;
+}
+
+.librosTitulo {
+  animation: titulos-animacion 2s ease 0s 1 normal forwards;
 }
 
 .card {
@@ -264,10 +295,18 @@ h1, h2 {
   padding: 40px;
 }
 
+.tituloBestiario {
+  animation: titulos-animacion 2s ease 0s 1 normal forwards;
+}
+
 .contacto {
   display: flex;
   flex-direction: column;
   padding: 40px;
+}
+
+.contactoTitulo {
+  animation: titulos-animacion 2s ease 0s 1 normal forwards;
 }
 
 .parrafo-contacto {
