--- a/scss/_comunes.scss
+++ b/scss/_comunes.scss
@@ -97,10 +97,11 @@ nav-link.active,
     .redes {
         flex-direction: column;
         position: fixed;
-        top: 70%;
+        top: 80%;
         right: 3%;
         padding: 3px;
         width: 50px;
+        opacity: 50%;
 }
 }
 
